<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notifications"
        app:icon="@drawable/ic_notifications">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/notifications"
            app:title="@string/sett_noti"
            app:summaryOn="@string/noti_off"
            app:summaryOff="@string/noti_on"/>


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/theme_app"
        app:icon="@drawable/ic_draw">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/black_theme"
            app:title="@string/sett_theme"
            app:summaryOn="Черная тема включена"
            app:summaryOff="Черная тема выключена"/>

    </PreferenceCategory>


</PreferenceScreen>