<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.iihfstatisticandnews.presentation.ui.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.iihfstatisticandnews.presentation.ui.gallery.GalleryFragment"
        android:label="@string/main"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.iihfstatisticandnews.presentation.ui.teams.TeamsFragment"
        android:label="@string/teams"
        tools:layout="@layout/fragment_teams" />
</navigation>